# Posture-correction-ai-project--train-

./: PostureCorrection.spec  README.md  bagging_model.pkl  decision_tree_model (1).pkl  decision_tree_model.pkl  gradient_boosting_model.pkl  landmarks-v1.csv  landmarks.csv  posture.csv  posture2.csv  posture3.csv  posture4.csv  posture5.csv  posture7.csv  posture8.csv  posture_data.csv  pyproject.toml  random_forest_model.pkl  random_forest_model11.pkl  random_forest_model12.pkl  random_forest_model2.pkl  random_forest_model3.pkl  random_forest_model4.pkl  random_forest_model6.pkl  recording.py  svm_model.pkl  test.py  train.py  xgboost_model.pkl
