[tool.poetry]
name = "mediapipe-proejct"
version = "0.1.0"
description = ""
authors = ["Creeper Eye <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
absl-py = "2.1.0"
attrs = "24.2.0"
cffi = "1.17.0"
contourpy = "1.2.1"
cycler = "0.12.1"
flatbuffers = "24.3.25"
fonttools = "4.53.1"
importlib-metadata = "8.4.0"
importlib-resources = "6.4.4"
jax = "0.4.30"
jaxlib = "0.4.30"
kiwisolver = "1.4.5"
matplotlib = "3.9.2"
mediapipe = "0.10.14"
ml-dtypes = "0.4.0"
numpy = "2.0.1"
opencv-contrib-python = "4.10.0.84"
opencv-python = "4.10.0.84"
opt-einsum = "3.3.0"
packaging = "24.1"
pillow = "10.4.0"
protobuf = "4.25.4"
pycparser = "2.22"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
scipy = "1.13.1"
six = "1.16.0"
sounddevice = "0.5.0"
zipp = "3.20.0"
joblib = "^1.4.2"
scikit-learn = "1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
